Mon Feb 12 18:18:05 2001  Frank Hunleth <fhunleth@cs.wustl.edu>

        * tests/Thread_Mutex_Test.cpp:
          Modified test to use process mutexes for Win32 platforms
          so that timed mutexes could be tested.

Sun Feb 11 15:33:39 2001  Darrell Brunsch <brunsch@uci.edu>

        * ace/QoS/ACE_QoS_Export.h:

          Added ACE_AS_STATIC_LIBS support.

        * ace/QoS/ACE_QoS.dsp:
        * ace/QoS/ACE_QoS_Lib.dsp:

          Fixed to comply with ACE standards.

Sun Feb 11 10:50:10 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* include/makeinclude/platform_sunos5_g++.GNU (exceptions): 
	  Only set the -fno-exceptions option if we're *not* using GCC
 	  2.7.2!  Thanks to Pradeep for explaining how to do this.

Sun Feb 11 10:15:08 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * ace/Makefile.bor:
        * ace/QoS/Makefile.bor:
        * include/makeinclude/ace_flags.bor:
          Added build support for QoS library with Borland compiler.

Sat Feb 10 15:29:08 2001  Carlos O'Ryan  <coryan@uci.edu>

        * ace/Message_Block.h:
          Improved documentation for the lenth(), size() and space()
          methods.

Sat Feb 10 07:19:37 2001  Christopher Kohlhoff  <chris@kohlhoff.com>

        * include/makeinclude/outputdir.bor:
          Removed the now out-of-date comment about pascal/non-pascal
          build directories.

        * ace/config-win32-borland.h:
          Added support for new ACE_HAS_VCL define to enable inclusion
          of VCL header files.

Fri Feb  9 16:47:44 2001  Pradeep Gore  <pradeep@cs.wustl.edu>

        * ace/Makefile.am:
          Removed references to the AQoSA files.

Fri Feb  9 16:42:10 2001  Pradeep Gore  <pradeep@cs.wustl.edu>

        * examples/QOS/client.dsp:
        * examples/QOS/server.dsp:
          Updated the corrected project files.
          Thanks to Darrell for pointing this out.

Thu Feb  8 19:25:03 2001  Carlos O'Ryan  <coryan@uci.edu>

        * performance-tests/RPC/run_test.pl: