@@ -45,8 +45,9 @@ public:
   JAWS_IO (void);
   virtual ~JAWS_IO (void);
   void handler (JAWS_IO_Handler *handler);
-  void handle (ACE_HANDLE h);
-  ACE_HANDLE handle (void);
+
+  virtual void handle (ACE_HANDLE h) = 0;
+  virtual ACE_HANDLE handle (void) = 0;
 
   // James, please add documentation here.
 
@@ -73,7 +74,6 @@ public:
   // send an error message to the handle.
 
 protected:
-  ACE_HANDLE handle_;
   JAWS_IO_Handler *handler_;
 };
 
@@ -136,6 +136,9 @@ public:
 
   ~JAWS_Synch_IO (void);
 
+  virtual void handle (ACE_HANDLE h);
+  virtual ACE_HANDLE handle (void);
+
   void read (ACE_Message_Block& mb, int size);
 
   void transmit_file (const char *filename,
@@ -158,6 +161,8 @@ public:
 protected:
   virtual void send_message (const char *buffer,
                              int length);
+
+  ACE_HANDLE handle_;
 };
 
 // This only works on Win32
@@ -174,6 +179,9 @@ public:
   JAWS_Asynch_IO (void);
 
   ~JAWS_Asynch_IO (void);
+
+  virtual void handle (ACE_HANDLE h) { ACE_Handler::handle (h); };
+  virtual ACE_HANDLE handle (void)   { return ACE_Handler::handle (); };
 
   void read (ACE_Message_Block& mb, int size);
 
